--- a/thinknest/package.json
+++ b/thinknest/package.json
@@ -16,6 +16,8 @@
     "@fullcalendar/timegrid": "^6.1.15",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@vercel/analytics": "^1.4.1",
+    "@vercel/speed-insights": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
