--- a/thinknest/package.json
+++ b/thinknest/package.json
@@ -28,7 +28,8 @@
     "react-dom": "^18.3.1",
     "sass": "^1.82.0",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "thinknest": "file:"
   },
   "devDependencies": {
     "@types/node": "^20",
