--- a/thinknest/package.json
+++ b/thinknest/package.json
@@ -27,6 +27,7 @@
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
+    "react-easy-crop": "^5.4.1",
     "sass": "^1.82.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
