--- a/thinknest/package.json
+++ b/thinknest/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.468.0",
+    "marked": "^15.0.7",
     "next": "^15.1.7",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
