--- a/thinknest/package.json
+++ b/thinknest/package.json
@@ -21,6 +21,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "firebase": "^11.4.0",
+    "firebase-admin": "^13.2.0",
     "lucide-react": "^0.468.0",
     "next": "^15.1.7",
     "react": "^19.0.0",
