--- a/thinknest/package.json
+++ b/thinknest/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "@google/generative-ai": "^0.24.0",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@vercel/analytics": "^1.4.1",
@@ -24,6 +25,7 @@
     "firebase": "^11.4.0",
     "firebase-admin": "^13.2.0",
     "lucide-react": "^0.468.0",
+    "marked": "^15.0.7",
     "next": "^15.1.7",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
